# gaya3-lib-manage

./: Makefile  README.md  library_system
backend/: CMakeLists.txt
backend/include/: SudokuGenerator.h  SudokuSolver.h  SudokuUI.h  SudokuValidator.h
backend/source/: SudokuGenerator.cpp  SudokuSolver.cpp  SudokuUI.cpp  SudokuValidator.cpp
data/: books.csv  history.csv  transactions.csv  users.csv
include/: Book.h  FileManager.h  LibrarySystem.h  Reservation.h  Student.h  SudokuGenerator.h  SudokuSolver.h  Transaction.h  User.h  Utils.h
src/: Book.cpp  FileManager.cpp  LibrarySystem.cpp  Reservation.cpp  Student.cpp  Transaction.cpp  User.cpp  Utils.cpp  main.cpp
